--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,85 @@
-# TAkathon Monorepo
+# TAkathon Nx Monorepo
 
-node_modules/
+# Dependencies
+node_modules
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Build outputs
+dist
+tmp
+/out-tsc
 .next/
-__pycache__/
-*.pyc
-.env
-.env.local
-*.log
-.DS_Store
-dist/
+out/
 build/
+target/
+
+# Nx
+.nx/cache
+.nx/workspace-data
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+.installed.cfg
+*.egg
 .pytest_cache/
 .coverage
 htmlcov/
-venv/
+.tox/
+.venv
 env/
+venv/
+ENV/
+*.pyc
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# IDEs
+.idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.sublime-workspace
+.DS_Store
+Thumbs.db
+
+# Testing
+/coverage
+.cache
+*.spec.ts.snap
+
+# Docker
+.dockerignore
+
+# Setup and cleanup scripts
+setup-*.ps1
+setup-*.sh
+cleanup-*.ps1
+cleanup-*.sh
+
+# Misc
+*.swp
+*.swo
+*~
+.vercel
+.turbo
