chore: fix nx workspace setup and clean up project config

--- a/apps/student-portal/package.json
+++ b/apps/student-portal/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "takathon-student-portal",
+    "name": "student-portal",
     "version": "1.0.0",
     "private": true,
     "scripts": {
