--- a/apps/organizer-dashboard/package.json
+++ b/apps/organizer-dashboard/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "takathon-organizer-dashboard",
+    "name": "organizer-dashboard",
     "version": "1.0.0",
     "private": true,
     "scripts": {
