--- a/package.json
+++ b/package.json
@@ -23,13 +23,20 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.16.0",
+    "eslint-config-next": "^15.1.0",
     "jest": "^29.7.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "nx": "^20.4.4",
     "typescript": "^5.7.0"
   },
   "dependencies": {
     "next": "^15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "axios": "^1.7.9",
+    "lucide-react": "^0.468.0",
+    "zustand": "^5.0.2"
   }
 }
