--- a/package.json
+++ b/package.json
@@ -19,5 +19,28 @@
   "bugs": {
     "url": "https://github.com/TAkathon/TAkathon_monorepo/issues"
   },
-  "homepage": "https://github.com/TAkathon/TAkathon_monorepo#readme"
+  "homepage": "https://github.com/TAkathon/TAkathon_monorepo#readme",
+  "private": true,
+  "dependencies": {
+    "axios": "^1.7.9",
+    "framer-motion": "^11.15.0",
+    "lucide-react": "^0.468.0",
+    "next": "^15.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.16.0",
+    "eslint-config-next": "^15.1.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.0",
+    "nx": "^19.0.0",
+    "@nx/next": "^19.0.0",
+    "@nx/eslint": "^19.0.0"
+  }
 }
