feat(shared): migrate authStore to shared library
- Move authStore to libs/shared/utils/src/lib/authStore.ts
- Add SSR safety checks to authStore cookie handling
- Configure @shared/utils path alias in student-portal and sponsor-panel

--- a/apps/student-portal/tsconfig.json
+++ b/apps/student-portal/tsconfig.json
@@ -16,7 +16,8 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@shared/utils": ["../../libs/shared/utils/src/index.ts"]
     },
     "resolveJsonModule": true,
     "isolatedModules": true,
