--- a/apps/landing-page/project.json
+++ b/apps/landing-page/project.json
@@ -1,35 +1,35 @@
 {
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "name": "landing-page",
   "projectType": "application",
-  "root": "apps/landing-page",
   "sourceRoot": "apps/landing-page/src",
   "targets": {
-    "dev": {
-      "executor": "nx:run-commands",
+    "build": {
+      "executor": "@nx/next:build",
       "options": {
-        "cwd": "apps/landing-page",
-        "command": "next dev"
+        "root": "apps/landing-page",
+        "outputPath": "dist/apps/landing-page"
       }
     },
-    "build": {
-      "executor": "nx:run-commands",
+    "dev": {
+      "executor": "@nx/next:server",
       "options": {
-        "cwd": "apps/landing-page",
-        "command": "next build"
+        "buildTarget": "landing-page:build",
+        "dev": true,
+        "port": 3000
       }
     },
     "start": {
-      "executor": "nx:run-commands",
+      "executor": "@nx/next:start",
       "options": {
-        "cwd": "apps/landing-page",
-        "command": "next start"
+        "root": "apps/landing-page",
+        "port": 3000
       }
     },
     "lint": {
-      "executor": "nx:run-commands",
+      "executor": "@nx/eslint:lint",
       "options": {
-        "cwd": "apps/landing-page",
-        "command": "next lint"
+        "lintFilePatterns": ["apps/landing-page/**/*.{ts,tsx}"]
       }
     }
   },
