--- a/package.json
+++ b/package.json
@@ -19,24 +19,27 @@
     "@nx/next": "^20.4.4",
     "@nx/react": "^20.4.4",
     "@nx/workspace": "^20.4.4",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.10.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
     "eslint-config-next": "^15.1.0",
     "jest": "^29.7.0",
-    "autoprefixer": "^10.4.20",
+    "nx": "^20.4.4",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
-    "nx": "^20.4.4",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.7.0"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "framer-motion": "^12.34.0",
+    "lucide-react": "^0.468.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "axios": "^1.7.9",
-    "lucide-react": "^0.468.0",
     "zustand": "^5.0.2"
   }
 }
