feat(shared/api): add axios client with refresh
wire app libs to shared api and add tsconfig paths

--- a/apps/organizer-dashboard/tsconfig.json
+++ b/apps/organizer-dashboard/tsconfig.json
@@ -22,7 +22,9 @@
     "paths": {
       "@/*": ["./src/*"],
       "@shared/utils": ["../../libs/shared/utils/src/index.ts"],
-      "@shared/utils/*": ["../../libs/shared/utils/src/*"]
+      "@shared/utils/*": ["../../libs/shared/utils/src/*"],
+      "@shared/api": ["../../libs/shared/api/src/index.ts"],
+      "@shared/api/*": ["../../libs/shared/api/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
