--- a/apps/landing-page/tsconfig.json
+++ b/apps/landing-page/tsconfig.json
@@ -26,7 +26,9 @@
         "paths": {
             "@/*": ["./src/*"],
             "@shared/utils": ["../../libs/shared/utils/src/index.ts"],
-            "@shared/utils/*": ["../../libs/shared/utils/src/*"]
+            "@shared/utils/*": ["../../libs/shared/utils/src/*"],
+            "@shared/api": ["../../libs/shared/api/src/index.ts"],
+            "@shared/api/*": ["../../libs/shared/api/src/*"]
         }
     },
     "include": [
