--- a/apps/sponsor-panel/tsconfig.json
+++ b/apps/sponsor-panel/tsconfig.json
@@ -24,7 +24,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@shared/utils": ["../../libs/shared/utils/src/index.ts"]
+      "@shared/utils": ["../../libs/shared/utils/src/index.ts"],
+      "@shared/api": ["../../libs/shared/api/src/index.ts"]
     }
   },
   "include": [
