--- a/apps/student-portal/tsconfig.json
+++ b/apps/student-portal/tsconfig.json
@@ -17,7 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@shared/utils": ["../../libs/shared/utils/src/index.ts"]
+      "@shared/utils": ["../../libs/shared/utils/src/index.ts"],
+      "@shared/api": ["../../libs/shared/api/src/index.ts"]
     },
     "resolveJsonModule": true,
     "isolatedModules": true,
