--- a/apps/organizer-dashboard/tsconfig.json
+++ b/apps/organizer-dashboard/tsconfig.json
@@ -22,9 +22,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@shared/utils": ["../../libs/shared/utils/src/index.ts"],
-      "@shared/utils/*": ["../../libs/shared/utils/src/*"],
-      "@shared/api": ["../../libs/shared/api/src/index.ts"],
-      "@shared/api/*": ["../../libs/shared/api/src/*"]
+      "@shared/utils/*": ["../../libs/shared/utils/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
