--- a/apps/core-gateway/.env.example
+++ b/apps/core-gateway/.env.example
@@ -5,3 +5,6 @@ JWT_ACCESS_SECRET=replace_with_strong_access_secret
 JWT_REFRESH_SECRET=replace_with_strong_refresh_secret
 ACCESS_TTL=15m
 REFRESH_TTL=7d
+
+# Database Connection
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/takathon?schema=public"
