--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "jest": "^29.7.0",
     "nx": "^20.4.4",
     "postcss": "^8.4.49",
+    "prisma": "^7.4.0",
     "tailwindcss": "^3.4.16",
     "ts-jest": "^29.4.6",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.0"
   },
   "dependencies": {
+    "@prisma/client": "^7.4.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
