--- a/apps/landing-page/Dockerfile
+++ b/apps/landing-page/Dockerfile
@@ -8,8 +8,10 @@ RUN npx nx build landing-page
 FROM node:22-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV production
-COPY --from=builder /app/dist/apps/landing-page/public ./public
-COPY --from=builder /app/dist/apps/landing-page/.next/standalone ./
-COPY --from=builder /app/dist/apps/landing-page/.next/static ./.next/static
+RUN npm install sharp
+COPY --from=builder /app/apps/landing-page/public ./apps/landing-page/public
+COPY --from=builder /app/apps/landing-page/.next/standalone ./
+COPY --from=builder /app/apps/landing-page/.next/static ./apps/landing-page/.next/static
 EXPOSE 3000
-CMD ["node", "server.js"]
+ENV HOSTNAME="0.0.0.0"
+CMD ["node", "apps/landing-page/server.js"]
