--- a/apps/sponsor-panel/Dockerfile
+++ b/apps/sponsor-panel/Dockerfile
@@ -8,8 +8,9 @@ RUN npx nx build sponsor-panel
 FROM node:22-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV production
-COPY --from=builder /app/dist/apps/sponsor-panel/public ./public
-COPY --from=builder /app/dist/apps/sponsor-panel/.next/standalone ./
-COPY --from=builder /app/dist/apps/sponsor-panel/.next/static ./.next/static
+COPY --from=builder /app/apps/sponsor-panel/public ./apps/sponsor-panel/public
+COPY --from=builder /app/apps/sponsor-panel/.next/standalone ./
+COPY --from=builder /app/apps/sponsor-panel/.next/static ./apps/sponsor-panel/.next/static
 EXPOSE 3003
-CMD ["node", "server.js"]
+ENV HOSTNAME="0.0.0.0"
+CMD ["node", "apps/sponsor-panel/server.js"]
