--- a/apps/ai-engine/Dockerfile
+++ b/apps/ai-engine/Dockerfile
@@ -15,4 +15,4 @@ COPY . .
 EXPOSE 8001
 
 # Start the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8001"]
