feat(shared): add Shared 404 component and implement in landing-page

--- a/apps/landing-page/tsconfig.json
+++ b/apps/landing-page/tsconfig.json
@@ -25,6 +25,9 @@
         "paths": {
             "@/*": [
                 "./src/*"
+            ],
+            "@takathon/shared/ui": [
+                "../../libs/shared/ui/src/index.ts"
             ]
         }
     },
