--- a/apps/core-gateway/tsconfig.json
+++ b/apps/core-gateway/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
@@ -7,10 +8,10 @@
     "strict": true,
     "outDir": "dist",
     "types": ["node"],
-    "baseUrl": ".",
+    "baseUrl": "../..",
     "paths": {
-      "@takathon/shared/types": ["../../libs/shared/types/src/index.ts"],
-      "@takathon/shared/types/*": ["../../libs/shared/types/src/*"]
+      "@takathon/shared/types": ["libs/shared/types/src/index.ts"],
+      "@takathon/shared/types/*": ["libs/shared/types/src/*"]
     }
   },
   "include": ["src/**/*.ts"],
