--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
+  # =========================================================
+  # PostgreSQL Database
+  # =========================================================
   postgres:
-    image: postgres:16
+    image: postgres:16-alpine
     container_name: takathon-db
     environment:
       POSTGRES_USER: postgres
@@ -18,15 +21,17 @@ services:
       timeout: 5s
       retries: 5
 
+  # =========================================================
+  # Core Gateway (Express + Prisma)
+  # =========================================================
   core-gateway:
     build:
       context: .
       dockerfile: apps/core-gateway/Dockerfile
-    platform: linux/amd64
     container_name: takathon-gateway
     environment:
       DATABASE_URL: postgresql://postgres:postgrespassword@postgres:5432/takathon?schema=public
-      PORT: 8000
+      PORT: "8000"
       CORS_ORIGINS: http://localhost:3000,http://localhost:3001,http://localhost:3002,http://localhost:3003
       JWT_ACCESS_SECRET: dev_access_secret_123456789
       JWT_REFRESH_SECRET: dev_refresh_secret_123456789
@@ -39,7 +44,17 @@ services:
         condition: service_healthy
     networks:
       - takathon-net
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:8000/api/v1/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
+    restart: unless-stopped
 
+  # =========================================================
+  # AI Engine (FastAPI) — optional, use: docker-compose --profile ai up
+  # =========================================================
   ai-engine:
     build:
       context: apps/ai-engine
@@ -49,58 +64,93 @@ services:
       - "8001:8001"
     networks:
       - takathon-net
+    profiles:
+      - ai
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:8001/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
+  # =========================================================
+  # Landing Page (Next.js)
+  # =========================================================
   landing-page:
     build:
       context: .
       dockerfile: apps/landing-page/Dockerfile
-    platform: linux/amd64
     container_name: takathon-landing
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:8000/api/v1
+      PORT: "3000"
     ports:
       - "3000:3000"
     networks:
       - takathon-net
+    depends_on:
+      core-gateway:
+        condition: service_healthy
+    restart: unless-stopped
 
+  # =========================================================
+  # Student Portal (Next.js)
+  # =========================================================
   student-portal:
     build:
       context: .
       dockerfile: apps/student-portal/Dockerfile
-    platform: linux/amd64
     container_name: takathon-student
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:8000/api/v1
+      PORT: "3001"
     ports:
       - "3001:3001"
     networks:
       - takathon-net
+    depends_on:
+      core-gateway:
+        condition: service_healthy
+    restart: unless-stopped
 
+  # =========================================================
+  # Organizer Dashboard (Next.js)
+  # =========================================================
   organizer-dashboard:
     build:
       context: .
       dockerfile: apps/organizer-dashboard/Dockerfile
-    platform: linux/amd64
     container_name: takathon-organizer
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:8000/api/v1
+      PORT: "3002"
     ports:
       - "3002:3002"
     networks:
       - takathon-net
+    depends_on:
+      core-gateway:
+        condition: service_healthy
+    restart: unless-stopped
 
+  # =========================================================
+  # Sponsor Panel (Next.js)
+  # =========================================================
   sponsor-panel:
     build:
       context: .
       dockerfile: apps/sponsor-panel/Dockerfile
-    platform: linux/amd64
     container_name: takathon-sponsor
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:8000/api/v1
+      PORT: "3003"
     ports:
       - "3003:3003"
     networks:
       - takathon-net
+    depends_on:
+      core-gateway:
+        condition: service_healthy
+    restart: unless-stopped
 
 networks:
   takathon-net:
