--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.10.0",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.20",
+    "esbuild": "^0.27.3",
     "eslint": "^9.16.0",
     "eslint-config-next": "^15.1.0",
     "jest": "^29.7.0",
@@ -43,6 +45,7 @@
     "typescript": "^5.7.0"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
@@ -54,6 +57,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
+    "pg": "^8.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.23.8",
