--- a/apps/student-portal/tsconfig.json
+++ b/apps/student-portal/tsconfig.json
@@ -18,7 +18,9 @@
     "paths": {
       "@/*": ["src/*"],
       "@shared/utils": ["../../libs/shared/utils/src/index.ts"],
-      "@shared/api": ["../../libs/shared/api/src/index.ts"]
+      "@shared/utils/*": ["../../libs/shared/utils/src/*"],
+      "@shared/api": ["../../libs/shared/api/src/index.ts"],
+      "@shared/api/*": ["../../libs/shared/api/src/*"]
     },
     "resolveJsonModule": true,
     "isolatedModules": true,
