feat(sponsor-panel): integrate all dashboard pages with real API
- Dashboard: dynamic stats from sponsorService.mySponsorships
- Opportunities: browse hackathons via sponsorService.listHackathons, sponsor CTA
- Requests: mySponsorships table with cancel action
- Budget: derived spending stats from sponsorship data, tier breakdown
- Profile: getProfile/updateProfile for company name, industry, website
- Updated api.ts re-exports and tsconfig.json wildcard paths

--- a/apps/sponsor-panel/tsconfig.json
+++ b/apps/sponsor-panel/tsconfig.json
@@ -25,7 +25,9 @@
     "paths": {
       "@/*": ["./src/*"],
       "@shared/utils": ["../../libs/shared/utils/src/index.ts"],
-      "@shared/api": ["../../libs/shared/api/src/index.ts"]
+      "@shared/utils/*": ["../../libs/shared/utils/src/*"],
+      "@shared/api": ["../../libs/shared/api/src/index.ts"],
+      "@shared/api/*": ["../../libs/shared/api/src/*"]
     }
   },
   "include": [
