hotfix:fixed nx workspace and downgraded versions of many packages

--- a/nx.json
+++ b/nx.json
@@ -42,6 +42,12 @@
       }
     }
   ],
+  "pluginsConfig": {
+    "@nx/js": {
+      "analyzeLockfile": false,
+      "analyzeSourceFiles": false
+    }
+  },
   "generators": {
     "@nx/react": {
       "application": {
