--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@nx/next": "^20.4.4",
     "@nx/react": "^20.4.4",
     "@nx/workspace": "^20.4.4",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.0",
     "@types/pg": "^8.16.0",
@@ -42,12 +47,19 @@
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.19.2",
     "framer-motion": "^11.18.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
     "pg": "^8.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "zod": "^3.23.8",
     "zustand": "^5.0.2"
   }
 }
